--- a/DateTimeExtensions.Web/Pages/Shared/_Layout.cshtml
+++ b/DateTimeExtensions.Web/Pages/Shared/_Layout.cshtml
@@ -13,11 +13,12 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-page="/Index">DateTimeExtensions.Web</a>
+            <a class="navbar-brand" asp-area="" asp-page="/Index">DateTimeExtensions Samples</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            @*
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
@@ -28,6 +29,7 @@
                     </li>
                 </ul>
             </div>
+                *@
         </div>
     </nav>
 </header>
@@ -39,7 +41,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2024 - DateTimeExtensions.Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        &copy; 2024 - João Matos Silva
     </div>
 </footer>
 
