--- a/DateTimeExtensions.Web/Pages/Index.cshtml
+++ b/DateTimeExtensions.Web/Pages/Index.cshtml
@@ -11,8 +11,8 @@
 </div>
 
 <div class="row">
-    <div class="col-9"><div class="calendar"></div></div>
-    <div class="col-3"> 
+    <div class="col-md-9"><div class="calendar"></div></div>
+    <div class="col-md-3"> 
         <h4>Holidays</h4>
         @foreach(var observance in Model.YearObservances)
         {
