--- a/DateTimeExtensions.Web/Pages/Countries.cshtml
+++ b/DateTimeExtensions.Web/Pages/Countries.cshtml
@@ -5,9 +5,18 @@
     ViewData["Title"] = "Select Country";
 }
 
-<div>
+<div class="row row-cols-1 row-cols-md-3 g-4">
     @foreach (var locale in Model.Locales)
     {
-        <p><a href="@Url.Page("Calendar", new { locale = locale.Identifier, year = Model.Year })"><span class="fi fi-@(locale.Country.ToLower())"></span> @locale.Name (@locale.Identifier)</a></p>
+        <div class="col">
+            <div class="card">
+                <a href="@Url.Page("Calendar", new { locale = locale.Identifier, year = Model.Year })">
+                    <div class="card-body">
+                        <h5 class="card-title"><span class="fi fi-@(locale.Country.ToLower())"></span> @locale.Name</h5>
+                        <p class="card-text">@locale.Identifier</p>
+                    </div>
+                </a>
+            </div>
+        </div>
     }
 </div>
