--- a/DateTimeExtensions.Web/Pages/Shared/_Layout.cshtml
+++ b/DateTimeExtensions.Web/Pages/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2024 - João Matos Silva
+        &copy; 2024 - João Matos Silva - <a href="https://github.com/joaomatossilva/datetimeextension-web">Source &commat; Github</a>
     </div>
 </footer>
 
